@@ -35,13 +35,12 @@ import java.util.List;
 import java.util.Objects;
 import jenkins.model.DirectlyModifiableTopLevelItemGroup;
 import jenkins.model.Jenkins;
-import org.apache.commons.lang.StringUtils;
 import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.DoNotUse;
 import org.kohsuke.stapler.AncestorInPath;
 import org.kohsuke.stapler.QueryParameter;
 import org.kohsuke.stapler.Stapler;
-import org.kohsuke.stapler.StaplerRequest;
+import org.kohsuke.stapler.StaplerRequest2;
 
 /**
  * {@link Descriptor} for {@link View}.
@@ -109,7 +108,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ListViewColumnDescriptor}s that can be used with this view.
      */
     public List<Descriptor<ListViewColumn>> getColumnsDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ListViewColumn.all())
@@ -122,7 +121,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      * Possible {@link ViewJobFilter} types that can be used with this view.
      */
     public List<Descriptor<ViewJobFilter>> getJobFiltersDescriptors() {
-        StaplerRequest request = Stapler.getCurrentRequest();
+        StaplerRequest2 request = Stapler.getCurrentRequest2();
         if (request != null) {
             View view = request.findAncestorObject(clazz);
             return view == null ? DescriptorVisibilityFilter.applyType(clazz, ViewJobFilter.all())
@@ -141,7 +140,7 @@ public abstract class ViewDescriptor extends Descriptor<View> {
      */
     @SuppressWarnings("unused") // expose utility check method to subclasses
     protected FormValidation checkDisplayName(@NonNull View view, @CheckForNull String value) {
-        if (StringUtils.isBlank(value)) {
+        if (value == null || value.isBlank()) {
             // no custom name, no need to check
             return FormValidation.ok();
         }
