@@ -24,6 +24,7 @@
 
 package hudson.model;
 
+import static org.awaitility.Awaitility.await;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.contains;
 import static org.hamcrest.Matchers.containsString;
@@ -34,15 +35,16 @@ import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.lessThan;
 import static org.hamcrest.Matchers.not;
 import static org.hamcrest.Matchers.nullValue;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotEquals;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertNotSame;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertSame;
-import static org.junit.Assert.assertThrows;
-import static org.junit.Assert.assertTrue;
+import static org.hamcrest.Matchers.oneOf;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertNotSame;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertSame;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import edu.umd.cs.findbugs.annotations.NonNull;
 import hudson.ExtensionList;
@@ -70,22 +72,26 @@ import hudson.security.GlobalMatrixAuthorizationStrategy;
 import hudson.security.Permission;
 import hudson.security.ProjectMatrixAuthorizationStrategy;
 import hudson.security.SparseACL;
+import hudson.slaves.ComputerLauncher;
 import hudson.slaves.DumbSlave;
 import hudson.slaves.OfflineCause;
+import hudson.slaves.RetentionStrategy;
+import hudson.slaves.SlaveComputer;
 import hudson.tasks.BatchFile;
 import hudson.tasks.BuildTrigger;
 import hudson.tasks.Shell;
 import hudson.triggers.SCMTrigger.SCMTriggerCause;
 import hudson.triggers.TimerTrigger.TimerTriggerCause;
 import hudson.util.OneShotEvent;
-import hudson.util.XStream2;
+import jakarta.servlet.ServletException;
 import java.io.File;
 import java.io.IOException;
 import java.io.UncheckedIOException;
 import java.net.HttpURLConnection;
-import java.net.URL;
+import java.net.URI;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
+import java.time.Duration;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
@@ -94,52 +100,45 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.CancellationException;
+import java.util.concurrent.CountDownLatch;
+import java.util.concurrent.ExecutionException;
+import java.util.concurrent.ExecutorService;
+import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.ScheduledThreadPoolExecutor;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.function.Function;
 import java.util.logging.Level;
-import javax.servlet.ServletException;
-import javax.servlet.http.HttpServlet;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
+import java.util.logging.Logger;
 import jenkins.model.BlockedBecauseOfBuildInProgress;
 import jenkins.model.Jenkins;
+import jenkins.model.queue.QueueIdStrategy;
 import jenkins.security.QueueItemAuthenticatorConfiguration;
+import jenkins.util.Timer;
 import org.acegisecurity.acls.sid.PrincipalSid;
-import org.apache.commons.fileupload.FileUploadException;
-import org.apache.commons.fileupload.disk.DiskFileItemFactory;
-import org.apache.commons.fileupload.servlet.ServletFileUpload;
-import org.eclipse.jetty.server.Server;
-import org.eclipse.jetty.server.ServerConnector;
-import org.eclipse.jetty.servlet.ServletHandler;
-import org.eclipse.jetty.servlet.ServletHolder;
 import org.htmlunit.HttpMethod;
 import org.htmlunit.Page;
 import org.htmlunit.ScriptResult;
 import org.htmlunit.WebRequest;
-import org.htmlunit.html.DomElement;
 import org.htmlunit.html.DomNode;
-import org.htmlunit.html.HtmlFileInput;
-import org.htmlunit.html.HtmlForm;
-import org.htmlunit.html.HtmlFormUtil;
 import org.htmlunit.html.HtmlPage;
 import org.htmlunit.xml.XmlPage;
-import org.junit.Assert;
-import org.junit.Ignore;
-import org.junit.Rule;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Disabled;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
-import org.jvnet.hudson.test.LoggerRule;
+import org.jvnet.hudson.test.LogRecorder;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
 import org.jvnet.hudson.test.MockQueueItemAuthenticator;
 import org.jvnet.hudson.test.SequenceLock;
 import org.jvnet.hudson.test.SleepBuilder;
 import org.jvnet.hudson.test.TestBuilder;
 import org.jvnet.hudson.test.TestExtension;
+import org.jvnet.hudson.test.junit.jupiter.WithJenkins;
 import org.jvnet.hudson.test.recipes.LocalData;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
@@ -147,17 +146,23 @@ import org.springframework.security.core.Authentication;
 /**
  * @author Kohsuke Kawaguchi
  */
+@WithJenkins
 public class QueueTest {
 
-    @Rule public JenkinsRule r = new JenkinsRule();
+    private final LogRecorder logging = new LogRecorder().record(Queue.class, Level.FINE);
 
-    @Rule
-    public LoggerRule logging = new LoggerRule().record(Queue.class, Level.FINE);
+    private JenkinsRule r;
+
+    @BeforeEach
+    void setUp(JenkinsRule rule) {
+        r = rule;
+    }
 
     /**
      * Checks the persistence of queue.
      */
-    @Test public void persistence() throws Exception {
+    @Test
+    void persistence() throws Exception {
         Queue q = r.jenkins.getQueue();
 
         // prevent execution to push stuff into the queue
@@ -179,6 +184,9 @@ public class QueueTest {
 
         // did it bind back to the same object?
         assertSame(q.getItems()[0].task, testProject);
+
+        // Clear the queue
+        assertTrue(q.cancel(testProject));
     }
 
     /**
@@ -187,7 +195,7 @@ public class QueueTest {
      */
     @LocalData
     @Test
-    public void recover_from_legacy_list() {
+    void recover_from_legacy_list() {
         Queue q = r.jenkins.getQueue();
 
         // loaded the legacy queue.xml from test LocalData located in
@@ -196,17 +204,21 @@ public class QueueTest {
 
         // The current counter should be the id from the item brought back
         // from the persisted queue.xml.
-        assertEquals(3, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(3, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("test", FreeStyleProject.class)));
     }
 
     /**
      * Can {@link Queue} successfully recover removal?
      */
-     @Test public void persistence2() throws Exception {
+    @Test
+    void persistence2() throws Exception {
         Queue q = r.jenkins.getQueue();
 
         resetQueueState();
-        assertEquals(0, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(0, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
 
         // prevent execution to push stuff into the queue
         r.jenkins.setNumExecutors(0);
@@ -227,7 +239,7 @@ public class QueueTest {
         assertEquals(0, q.getItems().length);
 
         // The counter state should be maintained.
-        assertEquals(1, Queue.WaitingItem.getCurrentCounterValue());
+        assertEquals(1, QueueIdStrategy.DefaultStrategy.getCurrentCounterValue());
     }
 
     /**
@@ -242,16 +254,17 @@ public class QueueTest {
     }
 
     @Test
-    public void queue_id_to_run_mapping() throws Exception {
+    void queue_id_to_run_mapping() throws Exception {
         FreeStyleProject testProject = r.createFreeStyleProject("test");
         FreeStyleBuild build = r.buildAndAssertSuccess(testProject);
-        Assert.assertNotEquals(Run.QUEUE_ID_UNKNOWN, build.getQueueId());
+        assertNotEquals(Run.QUEUE_ID_UNKNOWN, build.getQueueId());
     }
 
     /**
      * {@link hudson.model.Queue.BlockedItem} is not static. Make sure its persistence doesn't end up re-persisting the whole Queue instance.
      */
-    @Test public void persistenceBlockedItem() throws Exception {
+    @Test
+    void persistenceBlockedItem() throws Exception {
         Queue q = r.jenkins.getQueue();
         final SequenceLock seq = new SequenceLock();
 
@@ -286,62 +299,9 @@ public class QueueTest {
         r.assertBuildStatusSuccess(r.waitForCompletion(b1));
     }
 
-    public static final class FileItemPersistenceTestServlet extends HttpServlet {
-        private static final long serialVersionUID = 1L;
-
-        @Override protected void doGet(HttpServletRequest req, HttpServletResponse resp) throws IOException {
-            resp.setContentType("text/html");
-            resp.getWriter().println(
-                    "<html><body><form action='/' method=post name=main enctype='multipart/form-data'>" +
-                    "<input type=file name=test><input type=submit>" +
-                    "</form></body></html>"
-            );
-        }
-
-        @Override protected void doPost(HttpServletRequest req, HttpServletResponse resp) throws ServletException {
-            try {
-                ServletFileUpload f = new ServletFileUpload(new DiskFileItemFactory());
-                List<?> v = f.parseRequest(req);
-                assertEquals(1, v.size());
-                XStream2 xs = new XStream2();
-                System.out.println(xs.toXML(v.get(0)));
-            } catch (FileUploadException e) {
-                throw new ServletException(e);
-            }
-        }
-    }
-
-    @Test public void fileItemPersistence() throws Exception {
-        // TODO: write a synchronous connector?
-        byte[] testData = new byte[1024];
-        for (int i = 0; i < testData.length; i++)  testData[i] = (byte) i;
-
-
-        Server server = new Server();
-        ServerConnector connector = new ServerConnector(server);
-        server.addConnector(connector);
-
-        ServletHandler handler = new ServletHandler();
-        handler.addServletWithMapping(new ServletHolder(new FileItemPersistenceTestServlet()), "/");
-        server.setHandler(handler);
-
-        server.start();
-
-        try {
-            JenkinsRule.WebClient wc = r.createWebClient();
-            @SuppressWarnings("deprecation")
-            HtmlPage p = (HtmlPage) wc.getPage("http://localhost:" + connector.getLocalPort() + '/');
-            HtmlForm f = p.getFormByName("main");
-            HtmlFileInput input = f.getInputByName("test");
-            input.setData(testData);
-            HtmlFormUtil.submit(f);
-        } finally {
-            server.stop();
-        }
-    }
-
     @Issue("JENKINS-33467")
-    @Test public void foldableCauseAction() throws Exception {
+    @Test
+    void foldableCauseAction() throws Exception {
         final OneShotEvent buildStarted = new OneShotEvent();
         final OneShotEvent buildShouldComplete = new OneShotEvent();
 
@@ -384,31 +344,39 @@ public class QueueTest {
         assertNotNull(ca);
         StringBuilder causes = new StringBuilder();
         for (Cause c : ca.getCauses()) causes.append(c.getShortDescription()).append("\n");
-        assertEquals("Build causes should have all items, even duplicates",
-                "Started by user SYSTEM\nStarted by user SYSTEM\n"
-                + "Started by an SCM change\nStarted by an SCM change\nStarted by an SCM change\n"
-                + "Started by timer\nStarted by timer\n"
-                + "Started by remote host 1.2.3.4 with note: test\n"
-                + "Started by remote host 1.2.3.4 with note: test\n"
-                + "Started by remote host 4.3.2.1 with note: test\n"
-                + "Started by remote host 1.2.3.4 with note: foo\n",
-                causes.toString());
+        assertEquals("""
+                        Started by user SYSTEM
+                        Started by user SYSTEM
+                        Started by an SCM change
+                        Started by an SCM change
+                        Started by an SCM change
+                        Started by timer
+                        Started by timer
+                        Started by remote host 1.2.3.4 with note: test
+                        Started by remote host 1.2.3.4 with note: test
+                        Started by remote host 4.3.2.1 with note: test
+                        Started by remote host 1.2.3.4 with note: foo
+                        """,
+                causes.toString(),
+                "Build causes should have all items, even duplicates");
 
         // View for build should group duplicates
         JenkinsRule.WebClient wc = r.createWebClient();
         String buildPage = wc.getPage(build, "").asNormalizedText();
-        assertTrue("Build page should combine duplicates and show counts: " + buildPage,
-                   buildPage.contains("Started by user SYSTEM (2 times)\n"
-                        + "Started by an SCM change (3 times)\n"
-                        + "Started by timer (2 times)\n"
-                        + "Started by remote host 1.2.3.4 with note: test (2 times)\n"
-                        + "Started by remote host 4.3.2.1 with note: test\n"
-                        + "Started by remote host 1.2.3.4 with note: foo"));
+        assertTrue(buildPage.contains("""
+                        Started by user SYSTEM (2 times)
+                        Started by an SCM change (3 times)
+                        Started by timer (2 times)
+                        Started by remote host 1.2.3.4 with note: test (2 times)
+                        Started by remote host 4.3.2.1 with note: test
+                        Started by remote host 1.2.3.4 with note: foo"""),
+                   "Build page should combine duplicates and show counts: " + buildPage);
         System.out.println(new XmlFile(new File(build.getRootDir(), "build.xml")).asString());
     }
 
     @Issue("JENKINS-8790")
-    @Test public void flyweightTasks() throws Exception {
+    @Test
+    void flyweightTasks() throws Exception {
         MatrixProject m = r.jenkins.createProject(MatrixProject.class, "p");
         m.addProperty(new ParametersDefinitionProperty(
                 new StringParameterDefinition("FOO", "value")
@@ -432,8 +400,9 @@ public class QueueTest {
     }
 
     @Issue("JENKINS-10944")
-    @Test public void flyweightTasksBlockedByShutdown() throws Exception {
-        r.jenkins.doQuietDown(true, 0, null);
+    @Test
+    void flyweightTasksBlockedByShutdown() throws Exception {
+        r.jenkins.doQuietDown(true, 0, null, false);
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task = new TestFlyweightTask(cnt, null);
         assertTrue(Queue.isBlockedByShutdown(task));
@@ -448,7 +417,8 @@ public class QueueTest {
     }
 
     @Issue("JENKINS-24519")
-    @Test public void flyweightTasksBlockedBySlave() throws Exception {
+    @Test
+    void flyweightTasksBlockedBySlave() throws Exception {
         Label label = Label.get("myslave");
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task = new TestFlyweightTask(cnt, label);
@@ -462,7 +432,8 @@ public class QueueTest {
     }
 
     @Issue("JENKINS-41127")
-    @Test public void flyweightTasksUnwantedConcurrency() {
+    @Test
+    void flyweightTasksUnwantedConcurrency() {
         Label label = r.jenkins.getSelfLabel();
         AtomicInteger cnt = new AtomicInteger();
         TestFlyweightTask task1 = new TestFlyweightTask(cnt, label);
@@ -486,8 +457,109 @@ public class QueueTest {
         });
     }
 
+    @Test
+    void tryWithTimeoutSuccessfullyAcquired() throws InterruptedException, ExecutionException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            final CountDownLatch task1Started =  new CountDownLatch(1);
+            final CountDownLatch task1Release = new CountDownLatch(1);
+
+            Future<Void> task1 = executor.submit(Queue.wrapWithLock(() -> {
+                task1Started.countDown();
+                try {
+                    task1Release.await();
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                return null;
+            }));
+
+            // Wait for the first task to be started to ensure it is running and has the lock
+            task1Started.await();
+
+            // Create a task that will need to wait until the first task is complete that will fail to acquire.
+            final AtomicBoolean task2Result = new AtomicBoolean(false);
+            boolean acquired = Queue.tryWithLock(() -> {
+                task2Result.set(true);
+            }, Duration.ofMillis(10));
+            assertFalse(acquired);
+            assertFalse(task2Result.get());
+
+            // Now release the first task and wait (with a long timeout) and we should succeed at getting the lock.
+            final AtomicBoolean task3Result = new AtomicBoolean(false);
+            task1Release.countDown();
+            acquired = Queue.tryWithLock(() -> {
+                task3Result.set(true);
+            }, Duration.ofSeconds(30));
+
+            // First task should complete
+            task1.get();
+
+            // Task 2 should have acquired and completed
+            assertTrue(acquired);
+            assertTrue(task3Result.get());
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
+    @Test
+    void tryWithTimeoutFailedToAcquire() throws InterruptedException, ExecutionException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            // Submit one task that will block indefinitely until released
+            final CountDownLatch task1Started =  new CountDownLatch(1);
+            final CountDownLatch task1Release = new CountDownLatch(1);
+            Future<Void> task1 = executor.submit(Queue.wrapWithLock(() -> {
+                task1Started.countDown();
+                try {
+                    task1Release.await();
+                } catch (InterruptedException e) {
+                    throw new RuntimeException(e);
+                }
+                return null;
+            }));
+
+            // Wait for task 1 to start
+            task1Started.await();
+
+            // Try to acquire lock with 50ms timeout, expecting that it cannot be acquired
+            final AtomicBoolean task2Complete = new AtomicBoolean(false);
+            boolean result = Queue.tryWithLock(() -> {
+                task2Complete.set(true);
+            }, Duration.ofMillis(50));
+
+            // Results should indicate the task did not run
+            assertFalse(result);
+            assertFalse(task2Complete.get());
+
+            // Now release the first task and wait for it to finish
+            task1Release.countDown();
+            task1.get();
+
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
+    @Test
+    void tryWithTimeoutImmediatelyAcquired() throws InterruptedException {
+        ExecutorService executor = Executors.newFixedThreadPool(2);
+        try {
+            final AtomicBoolean taskComplete = new AtomicBoolean(false);
+            boolean result = Queue.tryWithLock(() -> {
+                taskComplete.set(true);
+            }, Duration.ofMillis(1));
+            assertTrue(result);
+            assertTrue(taskComplete.get());
+        } finally {
+            executor.shutdownNow();
+        }
+    }
+
     @Issue("JENKINS-27256")
-    @Test public void inQueueTaskLookupByAPI() throws Exception {
+    @Test
+    void inQueueTaskLookupByAPI() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
         Label label = Label.get("unknown-slave");
 
@@ -495,6 +567,13 @@ public class QueueTest {
         // stay in the queue after we schedule it, allowing us to query it.
         p.setAssignedLabel(label);
         p.scheduleBuild2(0);
+
+        // Wait 3 seconds if job is not already in the queue, reduce test flakes
+        if (!p.isInQueue()) {
+            Thread.sleep(3000);
+        }
+
+        assertTrue(p.isInQueue(), "Build not queued");
 
         JenkinsRule.WebClient webclient = r.createWebClient();
 
@@ -504,12 +583,15 @@ public class QueueTest {
         XmlPage queueItem = webclient.goToXml("queue/item/" + queueTaskId + "/api/xml");
         assertNotNull(queueItem);
         String tagName = queueItem.getDocumentElement().getTagName();
-        assertTrue(tagName.equals("blockedItem") || tagName.equals("buildableItem"));
+        assertThat(tagName, oneOf("blockedItem", "buildableItem"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     @Issue("JENKINS-28926")
     @Test
-    public void upstreamDownstreamCycle() throws Exception {
+    void upstreamDownstreamCycle() throws Exception {
         FreeStyleProject trigger = r.createFreeStyleProject();
         FreeStyleProject chain1 = r.createFreeStyleProject();
         FreeStyleProject chain2a = r.createFreeStyleProject();
@@ -580,7 +662,7 @@ public class QueueTest {
 
     @Issue("JENKINS-68780")
     @Test
-    public void upstreamProjectsInQueueBlock() throws Exception {
+    void upstreamProjectsInQueueBlock() throws Exception {
 
        FreeStyleProject a = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
        FreeStyleProject b = r.createFreeStyleProject();
@@ -605,7 +687,7 @@ public class QueueTest {
        // become permanently blocked
        q.scheduleMaintenance().get();
 
-       assertEquals("Queue should contain two blocked items but didn't.", 2, q.getBlockedItems().size());
+       assertEquals(2, q.getBlockedItems().size(), "Queue should contain two blocked items but didn't.");
 
        //Ensure orderly shutdown
        q.clear();
@@ -614,7 +696,7 @@ public class QueueTest {
 
     @Issue("JENKINS-68780")
     @Test
-    public void downstreamProjectsInQueueBlock() throws Exception {
+    void downstreamProjectsInQueueBlock() throws Exception {
 
        FreeStyleProject a = r.createFreeStyleProject();
        FreeStyleProject b = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
@@ -639,7 +721,7 @@ public class QueueTest {
        // become permanently blocked
        q.scheduleMaintenance().get();
 
-       assertEquals("Queue should contain two blocked items but didn't.", 2, q.getBlockedItems().size());
+       assertEquals(2, q.getBlockedItems().size(), "Queue should contain two blocked items but didn't.");
 
        //Ensure orderly shutdown
        q.clear();
@@ -648,7 +730,7 @@ public class QueueTest {
 
     @Issue("JENKINS-69850")
     @Test
-    public void handleCauseOfBlockageThatIsNull() throws Exception {
+    void handleCauseOfBlockageThatIsNull() throws Exception {
 
         FreeStyleProject a = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_BLOCKED_PROJECT);
         FreeStyleProject b = r.createFreeStyleProject(BlockingQueueTaskDispatcher.NAME_OF_ANOTHER_BLOCKED_PROJECT);
@@ -698,7 +780,8 @@ public class QueueTest {
         }
     }
 
-    @Test public void taskEquality() throws Exception {
+    @Test
+    void taskEquality() throws Exception {
         AtomicInteger cnt = new AtomicInteger();
         TestTask originalTask = new TestTask(cnt, true);
         ScheduleResult result = r.jenkins.getQueue().schedule2(originalTask, 0);
@@ -782,7 +865,8 @@ public class QueueTest {
         }
     }
 
-    @Test public void waitForStart() throws Exception {
+    @Test
+    void waitForStart() throws Exception {
         final OneShotEvent ev = new OneShotEvent();
         FreeStyleProject p = r.createFreeStyleProject();
         p.getBuildersList().add(new TestBuilder() {
@@ -807,21 +891,21 @@ public class QueueTest {
     /**
      * Make sure that the running build actually carries an credential.
      */
-    @Test public void accessControl() throws Exception {
+    @Test
+    void accessControl() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
             public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
-                assertEquals(alice2, Jenkins.getAuthentication2());
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
         r.buildAndAssertSuccess(p);
     }
 
-    private static Authentication alice2 = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
-    private static org.acegisecurity.Authentication alice = org.acegisecurity.Authentication.fromSpring(alice2);
+    private static Authentication alice = new UsernamePasswordAuthenticationToken("alice", "alice", Collections.emptySet());
 
 
     /**
@@ -830,17 +914,18 @@ public class QueueTest {
      * We do this test by letting a build run twice to determine its natural home,
      * and then introduce a security restriction to prohibit that.
      */
-    @Test public void permissionSensitiveSlaveAllocations() throws Exception {
+    @Test
+    void permissionSensitiveSlaveAllocations() throws Exception {
         r.jenkins.setNumExecutors(0); // restrict builds to those agents
         DumbSlave s1 = r.createSlave();
         DumbSlave s2 = r.createSlave();
 
         FreeStyleProject p = r.createFreeStyleProject();
-        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator(Map.of(p.getFullName(), alice)));
+        QueueItemAuthenticatorConfiguration.get().getAuthenticators().add(new MockQueueItemAuthenticator().authenticate(p.getFullName(), alice));
         p.getBuildersList().add(new TestBuilder() {
             @Override
             public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
-                assertEquals(alice2, Jenkins.getAuthentication2());
+                assertEquals(alice, Jenkins.getAuthentication2());
                 return true;
             }
         });
@@ -873,7 +958,7 @@ public class QueueTest {
             if (node.getNodeName().equals(blocked)) {
                 // ACL that allow anyone to do anything except Alice can't build.
                 SparseACL acl = new SparseACL(null);
-                acl.add(new PrincipalSid(alice2), Computer.BUILD, false);
+                acl.add(new PrincipalSid(alice), Computer.BUILD, false);
                 acl.add(new PrincipalSid("anonymous"), Jenkins.ADMINISTER, true);
                 return acl;
             }
@@ -881,9 +966,10 @@ public class QueueTest {
         }
     }
 
-    @Test public void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, InterruptedException {
-        FreeStyleProject project1 = r.createFreeStyleProject();
-        FreeStyleProject project2 = r.createFreeStyleProject();
+    @Test
+    void pendingsConsistenceAfterErrorDuringMaintain() throws IOException, InterruptedException {
+        FreeStyleProject project1 = r.createFreeStyleProject("project1");
+        FreeStyleProject project2 = r.createFreeStyleProject("project2");
         TopLevelItemDescriptor descriptor = new TopLevelItemDescriptor(FreeStyleProject.class) {
          @Override
             public FreeStyleProject newInstance(ItemGroup parent, String name) {
@@ -914,7 +1000,7 @@ public class QueueTest {
                     break; // executor is dead due to exception
              }
              if (e.isIdle()) {
-                 assertTrue("Node went to idle before project had" + project2.getDisplayName() + " been started", v.isDone());
+                 assertTrue(v.isDone(), "Node went to idle before project had" + project2.getDisplayName() + " been started");
              }
              Thread.sleep(1000);
         }
@@ -926,17 +1012,22 @@ public class QueueTest {
             //project2 should not be in pendings
             List<Queue.BuildableItem> items = Queue.getInstance().getPendingItems();
             for (Queue.BuildableItem item : items) {
-                assertNotEquals("Project " + project2.getDisplayName() + " stuck in pendings", item.task.getName(), project2.getName());
+                assertNotEquals(item.task.getName(), project2.getName(), "Project " + project2.getDisplayName() + " stuck in pendings");
             }
         }
         for (var p : r.jenkins.allItems(FreeStyleProject.class)) {
             for (var b : p.getBuilds()) {
                 r.waitForCompletion(b);
+                b.delete();
+                Logger.getLogger(QueueTest.class.getName()).info(() -> "Waited for " + b);
             }
+            p.delete();
+            Logger.getLogger(QueueTest.class.getName()).info(() -> "Cleaned up " + p);
         }
     }
 
-    @Test public void cancelInQueue() throws Exception {
+    @Test
+    void cancelInQueue() throws Exception {
         // parepare an offline slave.
         DumbSlave slave = r.createOnlineSlave();
         assertFalse(slave.toComputer().isOffline());
@@ -947,21 +1038,21 @@ public class QueueTest {
         p.setAssignedNode(slave);
 
         QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(0);
-        assertThrows("Should time out (as the agent is offline)", TimeoutException.class, () -> f.get(3, TimeUnit.SECONDS));
+        assertThrows(TimeoutException.class, () -> f.get(3, TimeUnit.SECONDS), "Should time out (as the agent is offline)");
 
         Queue.Item item = Queue.getInstance().getItem(p);
         assertNotNull(item);
         Queue.getInstance().doCancelItem(item.getId());
         assertNull(Queue.getInstance().getItem(p));
 
-        assertThrows("Should not get (as it is cancelled)", CancellationException.class, () -> f.get(10, TimeUnit.SECONDS));
+        assertThrows(CancellationException.class, () -> f.get(10, TimeUnit.SECONDS), "Should not get (as it is cancelled)");
     }
 
-    @Test public void waitForStartAndCancelBeforeStart() throws Exception {
-        final OneShotEvent ev = new OneShotEvent();
+    @Test
+    void waitForStartAndCancelBeforeStart() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
 
-        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(10);
+        QueueTaskFuture<FreeStyleBuild> f = p.scheduleBuild2(30);
         final Queue.Item item = Queue.getInstance().getItem(p);
         assertNotNull(item);
 
@@ -979,9 +1070,10 @@ public class QueueTest {
         assertThrows(CancellationException.class, f::waitForStart);
     }
 
-    @Ignore("TODO flakes in CI")
+    @Disabled("TODO flakes in CI")
     @Issue("JENKINS-27871")
-    @Test public void testBlockBuildWhenUpstreamBuildingLock() throws Exception {
+    @Test
+    void testBlockBuildWhenUpstreamBuildingLock() throws Exception {
         final String prefix = "JENKINS-27871";
         r.getInstance().setNumExecutors(4);
 
@@ -1008,14 +1100,14 @@ public class QueueTest {
         final FreeStyleBuild buildB = taskB.get(60, TimeUnit.SECONDS);
         final FreeStyleBuild buildC = taskC.get(60, TimeUnit.SECONDS);
         long buildBEndTime = buildB.getStartTimeInMillis() + buildB.getDuration();
-        assertTrue("Project B build should be finished before the build of project C starts. " +
-                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis(),
-                buildC.getStartTimeInMillis() >= buildBEndTime);
+        assertTrue(buildC.getStartTimeInMillis() >= buildBEndTime,
+                "Project B build should be finished before the build of project C starts. " +
+                "B finished at " + buildBEndTime + ", C started at " + buildC.getStartTimeInMillis());
     }
 
     @Issue({"SECURITY-186", "SECURITY-618"})
     @Test
-    public void queueApiOutputShouldBeFilteredByUserPermission() throws Exception {
+    void queueApiOutputShouldBeFilteredByUserPermission() throws Exception {
         r.jenkins.setSecurityRealm(r.createDummySecurityRealm());
         ProjectMatrixAuthorizationStrategy str = new ProjectMatrixAuthorizationStrategy();
         str.add(Jenkins.READ, "bob");
@@ -1044,7 +1136,7 @@ public class QueueTest {
         //bob has permission on the project and will be able to see it in the queue together with information such as the URL and the name.
         for (DomNode element : p.getFirstChild().getFirstChild().getChildNodes()) {
             if (element.getNodeName().equals("task")) {
-                for (DomNode child : ((DomElement) element).getChildNodes()) {
+                for (DomNode child : element.getChildNodes()) {
                     if (child.getNodeName().equals("name")) {
                         assertEquals("project", child.asNormalizedText());
                     } else if (child.getNodeName().equals("url")) {
@@ -1074,6 +1166,9 @@ public class QueueTest {
         r.createWebClient().withBasicApiToken(bob).goToXml(url); // OK, 200
         r.createWebClient().withBasicApiToken(james).assertFails(url, HttpURLConnection.HTTP_FORBIDDEN); // only DISCOVER → AccessDeniedException
         r.createWebClient().withBasicApiToken(alice).assertFails(url, HttpURLConnection.HTTP_NOT_FOUND); // not even DISCOVER
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(project));
     }
 
     //we force the project not to be executed so that it stays in the queue
@@ -1091,7 +1186,7 @@ public class QueueTest {
     }
 
     @Test
-    public void testGetCauseOfBlockageForNonConcurrentFreestyle() throws Exception {
+    void testGetCauseOfBlockageForNonConcurrentFreestyle() throws Exception {
         Queue queue = r.getInstance().getQueue();
         FreeStyleProject t1 = r.createFreeStyleProject("project");
         t1.getBuildersList().add(new SleepBuilder(TimeUnit.SECONDS.toMillis(30)));
@@ -1111,12 +1206,26 @@ public class QueueTest {
         r.assertBuildStatusSuccess(r.waitForCompletion(build));
     }
 
-    @Test @LocalData
-    public void load_queue_xml() {
+    @Test
+    @LocalData
+    void load_queue_xml() {
         Queue q = r.getInstance().getQueue();
         Queue.Item[] items = q.getItems();
-        assertEquals(Arrays.asList(items).toString(), 11, items.length);
-        assertEquals("Loading the queue should not generate saves", 0, QueueSaveSniffer.count);
+        assertEquals(11, items.length, Arrays.asList(items).toString());
+        assertEquals(0, QueueSaveSniffer.count, "Loading the queue should not generate saves");
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("a", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("b", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("c", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("d", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("e", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("f", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("g", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("h", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("i", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("j", FreeStyleProject.class)));
+        assertTrue(r.jenkins.getQueue().cancel(r.jenkins.getItemByFullName("k", FreeStyleProject.class)));
     }
 
     @TestExtension("load_queue_xml")
@@ -1132,13 +1241,13 @@ public class QueueTest {
 
     @Test
     @Issue("SECURITY-891")
-    public void doCancelItem_PermissionIsChecked() throws Exception {
+    void doCancelItem_PermissionIsChecked() throws Exception {
         checkCancelOperationUsingUrl(item -> "queue/cancelItem?id=" + item.getId(), false);
     }
 
     @Test
     @Issue("SECURITY-891")
-    public void doCancelQueue_PermissionIsChecked() throws Exception {
+    void doCancelQueue_PermissionIsChecked() throws Exception {
         checkCancelOperationUsingUrl(item -> "queue/item/" + item.getId() + "/cancelQueue", true);
     }
 
@@ -1170,7 +1279,7 @@ public class QueueTest {
         Queue.Item currentOne = items[0];
         assertFalse(currentOne.getFuture().isCancelled());
 
-        WebRequest request = new WebRequest(new URL(r.getURL() + urlProvider.apply(currentOne)), HttpMethod.POST);
+        WebRequest request = new WebRequest(new URI(r.getURL() + urlProvider.apply(currentOne)).toURL(), HttpMethod.POST);
 
         { // user without right cannot cancel
             JenkinsRule.WebClient wc = r.createWebClient()
@@ -1199,7 +1308,7 @@ public class QueueTest {
     }
 
     @Test
-    public void flyweightsRunOnMasterIfPossible() throws Exception {
+    void flyweightsRunOnMasterIfPossible() throws Exception {
         r.createOnlineSlave();
         r.jenkins.setNumExecutors(0);
         List<TestFlyweightTask> tasks = new ArrayList<>();
@@ -1217,7 +1326,7 @@ public class QueueTest {
     }
 
     @Test
-    public void flyweightsRunOnAgentIfNecessary() throws Exception {
+    void flyweightsRunOnAgentIfNecessary() throws Exception {
         r.createOnlineSlave();
         r.jenkins.setNumExecutors(0);
         r.jenkins.toComputer().setTemporarilyOffline(true, new OfflineCause.UserCause(null, null));
@@ -1237,7 +1346,7 @@ public class QueueTest {
 
     @Test
     @Issue("JENKINS-57805")
-    public void brokenAffinityKey() throws Exception {
+    void brokenAffinityKey() throws Exception {
         BrokenAffinityKeyProject brokenProject = r.createProject(BrokenAffinityKeyProject.class, "broken-project");
         // Before the JENKINS-57805 fix, the test times out because the `NullPointerException` repeatedly thrown from
         // `BrokenAffinityKeyProject.getAffinityKey()` prevents `Queue.maintain()` from completing.
@@ -1246,7 +1355,7 @@ public class QueueTest {
 
     @Test
     @Issue("SECURITY-1537")
-    public void regularTooltipDisplayedCorrectly() throws Exception {
+    void regularTooltipDisplayedCorrectly() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
 
         String expectedLabel = "\"expected label\"";
@@ -1256,11 +1365,14 @@ public class QueueTest {
 
         String tooltip = buildAndExtractTooltipAttribute();
         assertThat(tooltip, containsString(expectedLabel.substring(1, expectedLabel.length() - 1)));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     @Test
     @Issue("SECURITY-1537")
-    public void preventXssInCauseOfBlocking() throws Exception {
+    void preventXssInCauseOfBlocking() throws Exception {
         FreeStyleProject p = r.createFreeStyleProject();
         p.setAssignedLabel(Label.get("\"<img/src='x' onerror=alert(123)>xss\""));
 
@@ -1269,6 +1381,9 @@ public class QueueTest {
         String tooltip = buildAndExtractTooltipAttribute();
         assertThat(tooltip, not(containsString("<img")));
         assertThat(tooltip, containsString("&lt;"));
+
+        // Clear the queue
+        assertTrue(r.jenkins.getQueue().cancel(p));
     }
 
     private String buildAndExtractTooltipAttribute() throws Exception {
@@ -1331,5 +1446,65 @@ public class QueueTest {
         public void run() {
             execute(new BuildExecution());
         }
+    }
+
+    private static class SlowSlave extends Slave {
+        SlowSlave(String name, File remoteFS, ComputerLauncher launcher) throws Descriptor.FormException, IOException {
+            super(name, remoteFS.getAbsolutePath(), launcher);
+        }
+
+        @Override public Computer createComputer() {
+            return new SlowComputer(this);
+        }
+    }
+
+    private static class SlowComputer extends SlaveComputer {
+        SlowComputer(SlowSlave slave) {
+            super(slave);
+        }
+
+        @Override
+        public boolean isOffline() {
+            try {
+                // This delay is just big enough to allow the test to simulate a computer failure at the time we expect.
+                Thread.sleep(100);
+            } catch (InterruptedException e) {
+                // ignore
+            }
+            return super.isOffline();
+        }
+    }
+
+    @Test
+    void computerFailsJustAfterCreatingExecutor() throws Throwable {
+        r.jenkins.setNumExecutors(0);
+        var p = r.createFreeStyleProject();
+        p.setAssignedLabel(r.jenkins.getLabel("agent"));
+        Slave onlineSlave = new SlowSlave("special", new File(r.jenkins.getRootDir(), "agent-work-dirs/special"), r.createComputerLauncher(null));
+        onlineSlave.setLabelString("agent");
+        onlineSlave.setRetentionStrategy(RetentionStrategy.NOOP);
+        r.jenkins.addNode(onlineSlave);
+        r.waitOnline(onlineSlave);
+
+        var computer = onlineSlave.toComputer();
+        Timer.get().execute(() -> {
+            // Simulate a computer failure just after the executor is created
+            while (computer.getExecutors().get(0).getStartTime() == 0) {
+                try {
+                    Thread.sleep(10);
+                } catch (InterruptedException e) {
+                    // ignore
+                }
+            }
+            computer.disconnect(new OfflineCause.ChannelTermination(new IllegalStateException()));
+        });
+        var f = p.scheduleBuild2(0);
+        await().until(computer::isOffline);
+        Thread.sleep(1000);
+        assertFalse(r.jenkins.getQueue().isEmpty(), "Queue item should be back as the executor got killed before it could be picked up");
+        // Put the computer back online
+        r.waitOnline(onlineSlave);
+        r.assertBuildStatusSuccess(f);
+        assertTrue(r.jenkins.getQueue().isEmpty());
     }
 }
