@@ -26,27 +26,24 @@ package jenkins;
 
 import java.io.File;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.TreeMap;
 import java.util.jar.JarEntry;
 import java.util.jar.JarFile;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.rules.ErrorCollector;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.WarExploder;
+import org.opentest4j.MultipleFailuresError;
 
-public class ClassPathTest {
+class ClassPathTest {
 
-    @Rule
-    public ErrorCollector errors = new ErrorCollector();
+    private final List<Throwable> errors = new ArrayList<>();
 
-    private static final Set<String> KNOWN_VIOLATIONS = Collections.unmodifiableSet(new HashSet<>(Arrays.asList(
+    private static final Set<String> KNOWN_VIOLATIONS = Set.of(
             // TODO duplicated in [jline-2.14.6.jar, jansi-1.11.jar]
             "org/fusesource/hawtjni/runtime/Callback.class",
             "org/fusesource/hawtjni/runtime/JNIEnv.class",
@@ -75,16 +72,18 @@ public class ClassPathTest {
             "org/fusesource/jansi/internal/Kernel32$SMALL_RECT.class",
             "org/fusesource/jansi/internal/Kernel32.class",
             "org/fusesource/jansi/internal/WindowsSupport.class",
-            "org/fusesource/jansi/WindowsAnsiOutputStream.class",
-            // TODO duplicated in [kxml2-2.3.0.jar, xpp3-1.1.4c.jar]
-            "org/xmlpull/v1/XmlPullParser.class",
-            "org/xmlpull/v1/XmlPullParserException.class",
-            "org/xmlpull/v1/XmlPullParserFactory.class",
-            "org/xmlpull/v1/XmlSerializer.class")));
+            "org/fusesource/jansi/WindowsAnsiOutputStream.class");
+
+    @AfterEach
+    void tearDown() {
+        if (!errors.isEmpty()) {
+            throw new MultipleFailuresError(null, errors);
+        }
+    }
 
     @Issue("JENKINS-46754")
     @Test
-    public void uniqueness() throws Exception {
+    void uniqueness() throws Exception {
         Map<String, List<String>> entries = new TreeMap<>();
         for (File jar : new File(WarExploder.getExplodedDir(), "WEB-INF/lib").listFiles((dir, name) -> name.endsWith(".jar"))) {
             String jarname = jar.getName();
@@ -100,7 +99,7 @@ public class ClassPathTest {
         }
         entries.forEach((name, jarnames) -> {
             if (jarnames.size() > 1 && !KNOWN_VIOLATIONS.contains(name)) { // Matchers.hasSize unfortunately does not display the collection
-                errors.addError(new AssertionError(name + " duplicated in " + jarnames));
+                errors.add(new AssertionError(name + " duplicated in " + jarnames));
             }
         });
     }
